--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-coordinate-input": "^1.0.0",
     "react-country-state-city": "^1.1.2",
